[tool.poetry]
name = "Reina"
version = "3.0.0"
description = "A high performance, production-ready fork of Beryl"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
py-cord = {extras = ["voice"], version = "^2.4.1"}
python-dotenv = "^1.0.0"
aiodns = "^3.0.0"
brotli = "^1.0.9"
uvloop = "^0.17.0"
pysimdjson = "^5.0.2"
orjson = "^3.9.1"
ffmpeg-python = "^0.2.0"
python-dateutil = "^2.8.2"
rin-exceptions = "^1.0.3"
gql = {extras = ["aiohttp"], version = "^3.4.1"}
numpy = "^1.24.3"
asyncpraw = "^7.7.0"
tortoise-orm = {extras = ["accel"], version = "^0.19.3"}
asyncpg = "^0.27.0"
coredis = "^4.14.0"
ciso8601 = "^2.3.0"
python-rapidjson = "^1.10"
ormsgpack = "^1.2.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pyinstrument = "^4.5.0"

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
