[tool.poetry]
name = "Reina"
version = "3.0.0"
description = "A high performance, production-ready fork of Beryl"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8,<4.0"
py-cord = {extras = ["voice"], version = "^2.4.1"}
python-dotenv = "^1.0.1"
aiodns = "^3.1.1"
brotli = "^1.0.9"
uvloop = "^0.19.0"
pysimdjson = "^5.0.2"
orjson = "^3.9.14"
ffmpeg-python = "^0.2.0"
python-dateutil = "^2.8.2"
rin-exceptions = "^1.0.3"
gql = {extras = ["aiohttp"], version = "^3.4.1"}
numpy = "^1.24.4"
asyncpraw = "^7.7.1"
tortoise-orm = {extras = ["accel"], version = "^0.20.0"}
asyncpg = "^0.29.0"
coredis = "^4.16.0"
ciso8601 = "^2.3.1"
python-rapidjson = "^1.14"
ormsgpack = "^1.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pyinstrument = "^4.6.2"

[tool.isort]
profile = 'black'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
